# query-service

application/: Dockerfile  README.md  pyproject.toml
application/query_service/: app_config.py  endpoints.py  noxfile.py
application/query_service/controller/: dto.py
application/query_service/core/: entities.py  exceptions.py
application/query_service/core/repository/: pipeline_repository.py  vendor_repository.py
application/query_service/infrastructure/: pipeline_repository.py  vendor_repository.py
application/query_service/service/: use_cases.py
